Reworked threedimensional, completed basic functionality