@@ -6,7 +6,7 @@
 
     <groupId>juanmanuel.gealma</groupId>
     <artifactId>GeAlMa</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
@@ -85,6 +85,11 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
